# ai-fluency

./: .gitignore  CHANGELOG.md  README.md  ai_fluency_report.html  insight.py  install.sh  pyproject.toml  requirements.txt
.claude/skills/ai-fluency/: SKILL.md
.claude/workflows/: ai-fluency.js
claude_insight/: __init__.py  cli.py
claude_insight/analyzer/: llm.py  metrics.py
claude_insight/parser/: transcript.py
claude_insight/reports/: html_report.py  terminal.py
docs/: MULTI_SOURCE_PLAN.md  index.html
fixtures/demo_sessions/: passive_driver.jsonl  prepared_brief.jsonl  strong_driver.jsonl
reference/: ai-fluency-framework.md
tests/: goldens_claude_code.json  regen_goldens.py  test_insight.py  test_skill.py
