[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-insight"
version = "0.1.0"
description = "Local AI coding session analyzer — privacy-first Claude Code transcript parser"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Felipe", email = "onigiri@openclaw.ai"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
claude-insight = "claude_insight.cli:main"

[project.urls]
Homepage = "https://github.com/Feloguarin/claude-insight"
Repository = "https://github.com/Feloguarin/claude-insight"
